--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mix/concurrent",
-  "description": "MixPHP 框架模块 http://www.mixphp.cn",
+  "description": "Mix Concurrent http://www.mixphp.cn",
   "type": "framework",
   "keywords": [
     "framework",
